themes/bootprint3/less/bootprint.less
/* #LESS> */
@import "../../bootstrap3/less/bootstrap";
@import "variables";
/* <#LESS */
/* #SCSS>
@import "variables", "../../bootstrap3/scss/bootstrap";
<#SCSS */

@import "icons";
@import "search";
@import "forms";

@brand-primary: #619144; /* a11y overrides @brand-primary in sass */
@active-orange: #E70;

/* --- Bootstrap MODS ---*/
@import "common";

body {
  background: @brand-primary;
  font-size: 13px;
}

#commentList .comment:nth-child(even) { background: @gray-lighter; }
#dateVisColorSettings { stroke: @brand-primary; }
#hierarchyRecord { background: #fff; }
.cart-controls .checkbox { line-height: 2rem; }
.myresearch-menu a:hover { text-decoration: none; }

/* --- Layout --- */
.main .container { padding-top: 1rem; }
.main .sidebar { background-color: #fff; }

@media (min-width: 768px) {
  .main .sidebar { padding: 0; }
  .sidebar.left { padding-right: 1rem; }
  .sidebar.right { padding-left: 1rem;   }
}

/* --- Header --- */
header { margin-top: 18px; }
header .fa.fa-bars { font-size: 21px; }
header .navbar {
  border-radius: 5px 5px 0 0;
  padding: 0 10px;
  &.search { border-radius: 0; }
  .navbar-brand {
    height: 65px;
    width: 170px;
    margin-top: 5px;
    color: transparent;
    background-image: ~"url('../../bootprint3/images/vufind_logo.png')";
    background-position: center center;
    background-repeat: no-repeat;
    background-size: contain;
    &:active,
    &:focus,
    &:hover { color: transparent; }
    &.lang-ar { background-image: ~"url('../../bootprint3/images/vufind_logo_ar.png')"; }
  }
  .navbar-nav > li > a,
  .navbar-nav > li .dropdown-toggle  {
    position: relative;
    padding: 12px 6px;
    color: @link-color;

    &:hover,
    &:focus {
      z-index: 1000;
      text-decoration: none;
      color: #000;
      outline: dotted 1px #000;
      background-color: #eeeeee;
    }
  }
  .navbar-right { margin-top: 12px; }
  @media (max-width: 767px) {
    .navbar-nav > li > a,
    .navbar-nav > li .dropdown-toggle { padding: 8px 24px; }
    .navbar-right { margin: 0; }
  }
}
header .searchbox .tab-content { border: 0; }
header .searchbox .tab-content .navbar-text { margin: 5px 10px 5px 0; }
@media (max-width: 767px) {
  header #header-collapse .navbar-right li { text-align: right; }
  header .searchForm_type {
    margin-top: 2px;
    margin-bottom: 2px
  }
}

/* --- Footer --- */
footer {
  margin-bottom: 2rem;
  border-radius: 0 0 5px 5px;
  border-top: 1px solid @nav-tabs-border-color;
}
footer hr { display: none; }
footer p { margin: 0; }
footer ul { padding-left: 30px; }

/* --- Browse --- */
[id^=list].list-group .col-sm-9 { margin: 0; }

/* --- Channels --- */
.channel {
  max-width: 96%;
  margin-left: 2%;
  margin-right: 2%;
}
.channel,
.channel-title.no-results { margin-bottom: 2rem; }
.channel-title { margin-top: 1rem; }
.channel-title .fa { margin-top: 4px; }

/* --- Random Items (results view) --- */
ul.random {
  list-style: none;
  padding: 0;
  margin: 0;
  text-align: justify;
}
ul.random li { padding-bottom: 10px; }
ul.random li img { margin: 0 auto 1em; }
ul.random.image,
ul.random.mixed { text-align: center; }
ul.random.image li img { margin: 0 auto; }

/* --- ReCaptcha --- */
#custom_recaptcha_widget { display: table; }
#custom_recaptcha_widget embed { display: none; }
#custom_recaptcha_widget #recaptcha_image {
  border: 1px solid #000;
  padding: 6px;
  margin: 1em 0;
}
#custom_recaptcha_widget #recaptcha_response_field { margin: 0 .5em; }
#custom_recaptcha_widget > div > a {
  display: inline-block;
  float: left;
  margin: 5px 10px 5px 0;
}

/* --- Record --- */
.record-nav .action-toolbar {
  display: table;
  margin: 0 auto 1rem;
}

/* --- Sidebar --- */
.sidebar {
  .facet-group { margin-bottom: 5px; }
  .facet-group label.list-group-item { padding-left: 26px; }
  .facet-group label.list-group-item input[type=checkbox] { margin-top: 2px; }

  .facet { padding: 7px 10px 6px; }
  .facet-tree .facet {
    padding-left: 2px;
  }
  .facet.active,
  .facet.active:hover,
  .active-filters .facet {
    color: #fff;
    background-color: @active-orange;
    border-color: @active-orange;
  }
  .facet.active .badge,
  .jstree-node.active .badge,
  .jstree-node.active .badge .fa { color: @active-orange; }
  .facet .badge a { color: #fff; }
}
.checkboxFilter .facet { padding-left: 1px; }

.slider-container .slider-handle {
  background: @brand-primary;
  border: 1px solid @brand-primary;
  &:hover,&:active,&:focus {
    background: #FFF;
    border-color: @gray-light;
  }
  &:active,&:focus { border-color: @brand-primary; }
}
.top-row .badge a {
  color: #fff;
  &:hover { color: @brand-danger; }
}

.jstree-facet .active > .jstree-anchor .facet {
  background-color: @active-orange;
}

